--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "local": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@hapi/hapi": "^20.1.2",
+    "dotenv": "^8.2.0",
     "faker": "^5.5.2",
     "jsonschema": "^1.4.0",
     "lodash": "^4.17.21",
