--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "local": "nodemon index.js"
+    "local": "nodemon index.js",
+    "test": "jest"
+
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,9 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "cross-env": "^7.0.3",
+    "jest": "^27.2.0",
+    "nodemon": "^2.0.7",
+    "supertest": "^6.1.6"
   }
 }
